--- a/smsproject1/templates/adminhome.html
+++ b/smsproject1/templates/adminhome.html
@@ -31,6 +31,7 @@
        </ul>
     </li> -->
     <a href="{% url 'regadmin1' %}">Registrations</a>
+      <a href="{% url 'addcc0' %}">View CC's</a>
       <a href="{% url 'adminchangepwd' %}">Change password</a>&nbsp;&nbsp;
    <a href="{% url 'AdminLogout' %}">LogOut</a>
   </ul>
