--- a/smsproject1/templates/facultyhome.html
+++ b/smsproject1/templates/facultyhome.html
@@ -24,9 +24,11 @@
        <ul class="dropdown">
            <li><a href="{% url 'facultycourse' %}">My Courses</a></li>
            <li><a href="{% url 'fccontent0' %}">Material</a></li>
+           <li><a href="{% url 'fpostintcc0' %}">Internals</a></li>
 
        </ul>
     </li>
+<a href="{% url 'fviewfeedback0' %}">View Feedbacks</a>
 <a href="{% url 'facultychangepwd' %}">Change password</a>&nbsp;&nbsp;
 <a href="{% url 'facultylogin' %}">LogOut</a>
 
