--- a/smsproject1/templates/studenthome.html
+++ b/smsproject1/templates/studenthome.html
@@ -28,6 +28,7 @@
       <a>Courses</a>
        <ul class="dropdown">
            <li><a href="{% url 'studentcourse' %}">Material</a></li>
+           <li><a href="{% url 'sviewint0' %}">Internals</a></li>
 
            <li><a href="#">Handouts</a></li>
 
