--- a/smsproject1/templates/viewfstudents2.html
+++ b/smsproject1/templates/viewfstudents2.html
@@ -11,7 +11,7 @@
           {% for i in r  %}
           <tr>
               <td>{{i.course.coursetitle}}</td>
-              <td><a href="viewfstudents3/{{i.course.department}}/{{i.course.academicyear}}/{{i.course.year}}/{{i.course.semester}}/{{i.course.coursetitle}}/{{i.faculty.facultyid}}">Get Students</a></td>
+              <td><a href="viewfstudents3/{{i.course.department}}/{{i.course.academicyear}}/{{i.course.year}}/{{i.course.semester}}/{{i.course.coursecode}}/{{i.faculty.facultyid}}">Get Students</a></td>
           </tr>
       </table>
        {% endfor %}
