--- a/smsproject1/templates/addcc0.html
+++ b/smsproject1/templates/addcc0.html
@@ -2,7 +2,7 @@
 
 {% block 'body' %}
 <center>
-    <table>
+    <table border="1">
         <tr>
             <td>FacultyID - Name</td>
             <td>CourseCode</td>
