--- a/smsproject1/templates/adminchangepwd.html
+++ b/smsproject1/templates/adminchangepwd.html
@@ -1,6 +1,7 @@
-{% extends 'index.html' %}
+{% extends 'adminhome.html' %}
 
 {% block 'body' %}
+
 <h1 align="center"><u>Change Password</u> </h1>
 <h4 align="center" style="color:red">{{msg}}</h4>
 <center>
@@ -33,7 +34,6 @@
             <td><input type="reset" value="Clear" class="button"/></td>
         </tr>
 
-        <tr><td></td></tr>
 
 
 
