--- a/smsproject1/templates/fccontent1.html
+++ b/smsproject1/templates/fccontent1.html
@@ -48,7 +48,7 @@
 
          </td>
          <td>
-             <a href="/fccontent2/{{y.course.coursecode}} ">Upload </a>
+             <a href="/fccontent2/{{y.course.coursecode}} ">Upload</a><br>
              <a href="/fccontent4/{{y.course.department}}/{{y.course.academicyear}}/{{y.course.year}}/{{y.course.semester}}/{{y.course.coursecode}}">My Uploads</a>
          </td>
 
