--- a/smsproject1/templates/index.html
+++ b/smsproject1/templates/index.html
@@ -10,7 +10,7 @@
 <!--<body bgcolor="skyblue"> -->
 <body>
 <nav class="navbar">
-    <div class="logo">SMS</div>
+    <div class="logo">SCMS</div>
     <ul class="nav-links">
         <div class="menu" >
 
@@ -28,11 +28,11 @@
             </div>
     </ul>
 </nav>
-<br>
+
 {% block 'body' %}
-<h2 align ="center">Student Course management System</h2><br>
+<h2 align ="center">SCMS UNIVERITY</h2><br>
 <center>
-<img src="{% static 'images/img.jpg' %}" width=50% height=50% >
+<img src="{% static 'images/idx2.png' %}" height="70%" >
 </center>
 {% endblock %}
 </body>
