--- a/smsproject1/templates/studentcourse.html
+++ b/smsproject1/templates/studentcourse.html
@@ -5,7 +5,7 @@
 <h3 align="center">Enter Details</h3>
 <br>
 <center>
-<form method="post" action="{% url 'studentmycourse' %}">
+<form method="post" action="{% url 'studentcoursematview1' %}">
     {% csrf_token %}
     <table width="30%" height="30%" >
 
