--- a/smsproject1/static/css/style.css
+++ b/smsproject1/static/css/style.css
@@ -1,5 +1,5 @@
 body{
-background-color : lightgrey
+background-color:#ffffff ;
 }
 .button {
   position: relative;
@@ -41,8 +41,9 @@ li {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
-  background-color: teal;
+  padding: 2px;
+  background-color:#87CEEB ;
+
   color: #fff;
 }
 
@@ -63,7 +64,7 @@ li {
 }
 
 .menu li:hover {
-  background-color: #4c9e9e;
+  background-color: #B0E0E6;
   border-radius: 5px;
   transition: 0.3s ease;
 }
@@ -78,7 +79,7 @@ li {
 }
 
 .dropdown {
-  background-color: rgb(1, 139, 139);
+  background-color:  #87CEEB ;
   padding: 1em 0;
   position: absolute; /*WITH RESPECT TO PARENT*/
   display: none;
@@ -97,7 +98,7 @@ li {
 }
 
 .dropdown li:hover {
-  background-color: #4c9e9e;
+  background-color: #f8e5b9
 }
 
 .services:hover .dropdown {
