--- a/smsproject1/templates/adminhome.html
+++ b/smsproject1/templates/adminhome.html
@@ -11,17 +11,18 @@
 <body>
 <div class="topnavbar">
   <h2 align="left"><strong>SMS->></strong></h2>
-	<h3 align="center">Student Course Management -> (Student Portal)</h3>
+	<h3 align="center">Student Course Management -> (Admin Portal)</h3>
 	<h4 align="right" style="color:white">Welcome {{adminuname}}</h4>
 </div>
 
 <div class="vertical">
   <ul>
-   <a href="{% url 'adminhome' %}">AdminHome</a>
-   <a href="{% url 'adminstudent' %}">Student</a>
-   <a href="{% url 'adminfaculty'  %}">Faculty</a><a href="{% url 'admincourse' %}">Course</a>
-   <a href="{% url 'facultycoursemapping' %}">Faculty-Course-Mapping</a><a href="{% url 'login' %}">LOGIN</a>
-   <a href="{% url 'aviewfeedback0' %}">View Feedbacks of Students</a>
+   <a href="{% url 'adminhome' %}"><b>AdminHome</b></a>
+   <a href="{% url 'adminstudent' %}"><b>Student</b></a>
+   <a href="{% url 'adminfaculty'  %}"><b>Faculty</b></a>
+      <a href="{% url 'admincourse' %}"><b>Course</b></a>
+   <a href="{% url 'facultycoursemapping' %}"><b>Faculty-Course-Mapping</b></a>
+   <a href="{% url 'aviewfeedback0' %}"><b>View Feedbacks of Students</b></a>
       <!-- <li class="services">
       <a>Registrations</a>
        <ul class="dropdown">
@@ -30,14 +31,14 @@
 
        </ul>
     </li> -->
-    <a href="{% url 'regadmin1' %}">Registrations</a>
-      <a href="{% url 'addcc0' %}">View CC's</a>
-      <a href="{% url 'adminchangepwd' %}">Change password</a>&nbsp;&nbsp;
-   <a href="{% url 'AdminLogout' %}">LogOut</a>
+    <a href="{% url 'regadmin1' %}"><b>Registrations</b></a>
+      <a href="{% url 'addcc0' %}"><b>View CC's</b></a>
+      <a href="{% url 'adminchangepwd' %}"><b>Change password</b></a>&nbsp;&nbsp;
+   <a href="{% url 'AdminLogout' %}"><b>LogOut</b></a>
   </ul>
 </div>
 
-<div class="content">
+<div class="content" style="background-image: url('{% static 'images/clgbg1.jpg' %}'); width:100%; height:100%;">
   <!-- Your page content goes here -->
    {% block 'body' %}
      <center>
