--- a/smsproject1/templates/facultylogin.html
+++ b/smsproject1/templates/facultylogin.html
@@ -1,8 +1,12 @@
 {% extends 'index.html' %}
 
+{% load static %}
 {% block 'body' %}
-<h1 align="center"><u>Faculty Login</u> </h1>
-<h4 align="center" style="color:red">{{msg}}</h4>
+<body style="background-image: url('{% static 'images/lg2.png' %}'); background-size: cover;">
+<center>
+<h1><u>Faculty Login</u> </h1>
+<h4>{{msg}}</h4>
+ </center>
 <center>
 <form method="post" action="{% url 'checkfacultylogin' %}" >
 
