--- a/smsproject1/templates/regadmin3.html
+++ b/smsproject1/templates/regadmin3.html
@@ -6,13 +6,13 @@
   <div class="card">
 
   <div class="container">
-   {% if c.s1 %} <h4><b>Course&Faculty:&nbsp&nbsp&nbsp&nbsp</b>{{ c.f1 }}</h4>{% endif %}
-     {% if c.s2 %} <h4><b>Course&Faculty:&nbsp&nbsp&nbsp&nbsp</b>{{ c.f2}}</h4>{% endif %}
-     {% if c.s3 %} <h4><b>Course&Faculty:&nbsp&nbsp&nbsp&nbsp</b>{{ c.f3}}</h4>{% endif %}
-     {% if c.s4 %} <h4><b>Course&Faculty:&nbsp&nbsp&nbsp&nbsp</b>{{ c.f4 }}</h4>{% endif %}
-     {% if c.s5 %} <h4><b>Course&Faculty:&nbsp&nbsp&nbsp&nbsp</b>{{ c.f5}}</h4>{% endif %}
-     {% if c.s6 %} v<h4><b>Course&Faculty:&nbsp&nbsp&nbsp&nbsp</b>{{ c.f6}}</h4>{% endif %}
-     {% if c.s7 %} <h4><b>Course&Faculty:&nbsp&nbsp&nbsp&nbsp</b>{{ c.f7}}</h4>{% endif %}
+   {% if c.s1 %} <h4><b>Course-Faculty-Section:&nbsp&nbsp&nbsp&nbsp</b>{{c.cc1}}  - {{ c.f1 }} - {{c.sec1}}</h4>{% endif %}
+     {% if c.s2 %} <h4><b>Course-Faculty-Section:&nbsp&nbsp&nbsp&nbsp</b>{{c.cc2}} - {{ c.f2}} - {{c.sec2}}</h4>{% endif %}
+     {% if c.s3 %} <h4><b>Course-Faculty-Section:&nbsp&nbsp&nbsp&nbsp</b>{{c.cc3}} - {{ c.f3}} - {{c.sec3}}</h4>{% endif %}
+     {% if c.s4 %} <h4><b>Course-Faculty-Section:&nbsp&nbsp&nbsp&nbsp</b>{{c.cc4}} - {{ c.f4}} - {{c.sec4}}</h4>{% endif %}
+     {% if c.s5 %} <h4><b>Course-Faculty-Section:&nbsp&nbsp&nbsp&nbsp</b>{{c.cc5}} - {{ c.f5}} - {{c.sec5}}</h4>{% endif %}
+     {% if c.s6 %} v<h4><b>Course-Faculty-Section:&nbsp&nbsp&nbsp&nbsp</b>{{c.cc6}} - {{ c.f6}} - {{c.sec6}}</h4>{% endif %}
+     {% if c.s7 %} <h4><b>Course-Faculty-Section:&nbsp&nbsp&nbsp&nbsp</b>{{c.cc7}} - {{ c.f7}} - {{c.sec7}}</h4>{% endif %}
 
   </div>
 </div>
