--- a/smsproject1/templates/stmyprofile.html
+++ b/smsproject1/templates/stmyprofile.html
@@ -11,8 +11,9 @@
     <h4><b>Gender: </b>{{ x.gender }}</h4>
     <h4><b>Department: </b>{{ x.department }}</h4>
     <h4><b>Program: </b>{{ x.program }}</h4>
-    <h4><b>Semester: </b>{{ x.semester }}</h4>
-    <h4><b>Year: </b>{{ x.year }}</h4>
+    <h4><b>Academic Year Joined: </b>{{ x.ay }}</h4>
+    <h4><b> Current Academic Year: </b>{{ x.cur_ay }}</h4>
+    <h4><b>Current Semester: </b>{{x.cur_sem}}</h4>
     <h4><b>Email: </b>{{ x.email }}</h4>
     <h4><b>Contact: </b>{{ x.contact }}</h4>
 
