--- a/smsproject1/templates/studenthome.html
+++ b/smsproject1/templates/studenthome.html
@@ -27,10 +27,10 @@
      <li class="services">
       <a>Courses</a>
        <ul class="dropdown">
-           <li><a href="{% url 'studentcourse' %}">Material</a></li>
+           <li><a href="{% url 'studentcoursematview0' %}">Material</a></li>
            <li><a href="{% url 'sviewint0' %}">Internals</a></li>
 
-           <li><a href="#">Handouts</a></li>
+           <li><a href="{% url 'sviewhd0' %}">Handouts</a></li>
 
        </ul>
     </li>
@@ -42,7 +42,7 @@
 </div>
 
 <!-- Page Content -->
-<div class="content">
+<div class="content" style="background-image: url('{% static 'images/clgbg1.jpg' %}'); width:100%; height:100%;">
   <!-- Your page content goes here -->
    {% block 'body' %}
      <center>
