--- a/smsproject1/templates/viewcourses.html
+++ b/smsproject1/templates/viewcourses.html
@@ -2,48 +2,64 @@
 
 {% block 'body' %}
 <h2 align="center"><u>View Course Details</u></h2>
-Total no. of courses= {{count}}
- <input class="form-control" id="myInput" type="text" placeholder="Course Title">
 
-<table border="2" class="table table-bordered table-striped">
-    <thead>
-    <tr bgcolor="lightblue">
-        <td>Department</td>
-        <td>Program</td>
-        <td>Academic Year</td>
-        <td>Semester</td>
-        <td>Year</td>
-        <td>Course Code</td>
-        <td>Course Title</td>
-        <td>LTPS</td>
-        <td>Course Credits</td>
-    </tr>
-    </thead>
-    {% for course in coursesdata %}
-    <tbody id="myTable">
-     <tr align="center">
-         <td>{{course.department}}</td>
-         <td>{{course.program}}</td>
-         <td>{{course.academicyear}}</td>
-         <td>{{course.semester}}</td>
-         <td>{{course.year}}</td>
-         <td>{{course.coursecode}}</td>
-         <td>{{course.coursetitle}}</td>
-         <td>{{course.ltps}}</td>
-         <td>{{course.credits}}</td>
-     </tr>
-     </tbody>
-    {% endfor %}
+<center>
+    <input class="form-control" id="myInput" type="text" placeholder="Search">
+    <table border="2" class="table table-bordered table-striped">
 
-</table>
+        <thead>
+            <tr bgcolor="lightblue">
+                <td>Department</td>
+                <td>Program</td>
+                <td>Academic Year</td>
+                <td>Semester</td>
+                <td>Year</td>
+                <td>Course Code</td>
+                <td>Course Title</td>
+                <td>LTPS</td>
+                <td>Course Credits</td>
+            </tr>
+        </thead>
+        <tbody id="myTable">
+            {% for course in coursesdata %}
+            <tr align="center">
+                <td>{{course.department}}</td>
+                <td>{{course.program}}</td>
+                <td>{{course.academicyear}}</td>
+                <td>{{course.semester}}</td>
+                <td>{{course.year}}</td>
+                <td>{{course.coursecode}}</td>
+                <td>{{course.coursetitle}}</td>
+                <td>{{course.ltps}}</td>
+                <td>{{course.credits}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</center>
+
 <script>
-$(document).ready(function(){
-  $("#myInput").on("keyup", function() {
-    var value = $(this).val().toLowerCase();
-    $("#myTable tr").filter(function() {
-      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-    });
-  });
+document.addEventListener("DOMContentLoaded", function() {
+    const input = document.getElementById("myInput");
+    input.addEventListener("input", filterTable);
 });
+
+function filterTable() {
+    const filter = document.getElementById("myInput").value.toLowerCase();
+    const rows = document.getElementById("myTable").getElementsByTagName("tr");
+    for (let i = 0; i < rows.length; i++) {
+        const cells = rows[i].getElementsByTagName("td");
+        let display = "none";
+        for (let j = 0; j < cells.length; j++) {
+            const cellText = cells[j].textContent || cells[j].innerText;
+            if (cellText.toLowerCase().indexOf(filter) > -1) {
+                display = "";
+                break;
+            }
+        }
+        rows[i].style.display = display;
+    }
+}
 </script>
+
 {% endblock %}
