--- a/smsproject1/templates/viewfstudents1.html
+++ b/smsproject1/templates/viewfstudents1.html
@@ -2,27 +2,69 @@
 
 {% block 'body' %}
 <center>
-    <form method ="post" action="{% url 'viewfstudents2'%}">
+    <form method="post" action="{% url 'viewfstudents2'%}">
         {% csrf_token %}
-    <label>Department</label>
-    <input type="text" value="" name="dept" required/><br>
+        <table width="30%" height="30%" >
+        <h3><b>View Students</b></h3>
+        <tr>
+            <td><label><b>Program : </b></label></td>
+            <td>
+                <select name="pgm">
+                    <option value="">--Select--</option>
+                    <option value="BTECH">BTECH</option>
+                    <option value="MTECH">MTECH</option>
+                </select>
+            </td>
+        </tr>
 
-    <label>Academic Year</label>
-    <input type="text" value="" name="ay" required/><br>
+        <tr>
+            <td><label><b> Department: </b></label></td>
+            <td>
+                <select name="dept" required>
+                    <option value="">--Select--</option>
+                    <option value="CSE">CSE</option>
+                    <option value="ECE">ECE</option>
+                </select>
+            </td>
+        </tr>
 
-    <label>Year</label>
-    <input type="number" value="" name="yr" required/><br>
 
+        <tr>
+            <td><label><b> Academic Year: </b></label></td>
+            <td>
+                <select name="ay" required>
+                    <option value="">--Select--</option>
+                    <option value="2023-2024">2023-2024</option>
+                    <option value="2022-2023">2022-2023</option>
+                </select>
+            </td>
+        </tr>
 
-    <label>Semester</label>
-    <input type="text" value="" name="sem" required/><br>
+         <tr>
+            <td><label><b> Semester: </b></label></td>
+            <td>
+                <select name="sem" required>
+                    <option value="">--Select--</option>
+                    <option value="ODD">ODD</option>
+                    <option value="EVEN">EVEN</option>
+                </select>
+            </td>
+        </tr>
 
-     <label>Section</label>
-    <input type="number" value="" name="sec" required/><br>
+        <tr>
+            <td><label><b> Section </b></label></td>
+            <td><input type="number" value="" name="sec" required></td>
+        </tr>
 
-    <input type="submit" value="Get"/>
-    <input type="clear" value="Clear"/>
+        <tr>
+            <td><input type="submit"  value="Submit" class="addbutton"/></td>
+             <td><input type="reset"  value="Clear" class="addbutton"/></td>
+        </tr>
+
+    </table>
+
     </form>
 </center>
+
 
 {% endblock %}
